infra-setup/apps-ingress/apps-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mailbox-service.planetkesten.com
    http:
      paths:
      - path: /
        backend:
          serviceName: mailbox-service
          servicePort: 80
  - host: server-health.planetkesten.com
    http:
      paths:
      - path: /
        backend:
          serviceName: server-health
          servicePort: 80
  - host: connectivity-check.planetkesten.com
    http:
      paths:
      - path: /
        backend:
          serviceName: connectivity-check
          servicePort: 80
  - host: k8s-mdbook.planetkesten.com
    http:
      paths:
      - path: /
        backend:
          serviceName: k8s-mdbook
          servicePort: 80
